tests/specs/worker/worker_permissions_dynamic_remote/permissions_dynamic_remote.ts.out
error: Uncaught (in worker "") (in promise) TypeError: Requires import access to "example.com:443", run again with the --allow-import flag
await import("" + "https://example.com/some/file.ts");
^
    at async http://localhost:4545/workers/dynamic_remote.ts:2:1
[WILDCARD]error: Uncaught (in promise) Error: Unhandled error in child worker.
    at Worker.#pollControl [WILDCARD]
